# elaiksir-fw

./: .clang-format  CLAUDE.md  Makefile
.github/workflows/: ci.yml
liquid-machine/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
liquid-machine/components/board_hal/: CMakeLists.txt  board_hal.c
liquid-machine/components/cli/: CMakeLists.txt  cli.c
liquid-machine/components/ethernet/: CMakeLists.txt  ethernet.c
liquid-machine/components/flow_sensor/: CMakeLists.txt  flow_sensor.c
liquid-machine/components/http_api/: CMakeLists.txt  api_order.c  api_pump.c  api_settings.c  http_api.c
liquid-machine/components/load_cell/: CMakeLists.txt  load_cell.c
liquid-machine/components/motor_drv8841/: CMakeLists.txt  motor_drv8841.c
liquid-machine/components/solenoid/: CMakeLists.txt  solenoid.c
liquid-machine/components/temp_max31865/: CMakeLists.txt  temp_max31865.c
liquid-machine/main/: CMakeLists.txt  main.c
matcha-bowl/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
matcha-bowl/components/board_hal/: CMakeLists.txt  board_hal.c
matcha-bowl/components/cli/: CMakeLists.txt  cli.c
matcha-bowl/components/display/: CMakeLists.txt  display.c
matcha-bowl/components/heater/: CMakeLists.txt  heater.c
matcha-bowl/components/motor/: CMakeLists.txt  motor.c
matcha-bowl/components/rgb_led/: CMakeLists.txt  rgb_led.c
matcha-bowl/components/temp_sensor/: CMakeLists.txt  temp_sensor.c
matcha-bowl/components/touch/: CMakeLists.txt  touch.c
matcha-bowl/main/: CMakeLists.txt  main.c
shared/components/drv_ads1115/: ads1115.c
(+45 files in other folders)
